commit with heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ script: npm run travis
 before_deploy:
   # Set up git user name and tag this commit
   - tar -zcf ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tar.gz build
-  - git config --local user.name "ofirattia"
-  - git config --local user.email "ofirattia@gmail.com"
+  - git config --local user.name "talaital"
+  - git config --local user.email "talavital1993@gmail.com"
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG --force
 deploy:
